# devfile-fastapi

./: .gitignore  README.md  devfile.yaml  pyproject.toml
