[tool.poetry]
name = "icde-fastapi-template"
version = "0.1.0"
description = "ICDE Python FastAPI Template"
authors = ["Oscar Esgalha <oscar@instruct.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

